# CivicRAG

./: .gitattributes  .gitignore  Dockerfile  README.md  _run_queries.py  pyproject.toml  requirements.txt  start.bat  start.sh
api/: main.py
data/: bm25_index.pkl
data/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: EvalDashboard.jsx  GlowCard.jsx  GooeyText.jsx  Header.jsx  LatencyBar.jsx  QueryHistoryDrawer.jsx  QueryInput.jsx  ResponseStream.jsx  RevealText.jsx  SmokeBackground.jsx  SourceCards.jsx
ingest/: embed.py  scrape.py
retrieval/: hybrid.py  test_retrieval.py
storage/: db.py
