[project]
name = "civicrag"
version = "0.1.0"
description = "Production-grade hybrid RAG system over NJ legislative documents"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "groq>=0.9.0",
    "scikit-learn>=1.5.0",
    "transformers>=4.43.0",
    "tqdm>=4.66.0",
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]

[tool.hatch.build.targets.wheel]
packages = ["ingest", "retrieval", "storage", "api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
